fixed scrolling using scroll snap

--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
     "author": "Benjamin Flin",
     "version": "0.1.0",
     "private": true,
+    "homepage": "https://flin.org/ben",
     "dependencies": {
         "react": "^16.8.6",
         "react-dom": "^16.8.6",
