--- a/package.json
+++ b/package.json
@@ -3,13 +3,14 @@
     "author": "Benjamin Flin",
     "version": "0.1.0",
     "private": true,
-    "homepage": "https://flin.org/ben",
+    "homepage": "./",
     "dependencies": {
         "react": "^16.8.6",
         "react-dom": "^16.8.6",
         "react-redux": "^7.0.3",
         "react-scripts": "3.0.1",
-        "redux": "^4.0.1"
+        "redux": "^4.0.1",
+        "web-animations-js": "^2.3.1"
     },
     "scripts": {
         "start": "react-scripts start",
