--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,3 @@
-# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
 # dependencies
 /node_modules
@@ -10,6 +9,10 @@
 
 # production
 /build
+/public
+
+# cache
+.cache
 
 # misc
 .DS_Store
