--- a/package.json
+++ b/package.json
@@ -12,11 +12,13 @@
     "gatsby-image": "^2.2.39",
     "gatsby-plugin-create-client-paths": "^2.1.22",
     "gatsby-plugin-favicon": "^3.1.6",
+    "gatsby-plugin-layout": "^1.1.22",
     "gatsby-plugin-manifest": "^2.2.39",
     "gatsby-plugin-offline": "^3.0.32",
     "gatsby-plugin-react-helmet": "^3.1.21",
     "gatsby-plugin-react-svg": "^3.0.0",
     "gatsby-plugin-sharp": "^2.4.3",
+    "gatsby-plugin-transitions": "^2.1.6",
     "gatsby-plugin-typescript": "^2.1.26",
     "gatsby-source-filesystem": "^2.1.46",
     "gatsby-transformer-sharp": "^2.3.13",
@@ -24,7 +26,11 @@
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-helmet": "^5.2.1",
-    "react-spring": "^8.0.27"
+    "react-markdown": "^4.3.1",
+    "react-spring": "^8.0.27",
+    "react-syntax-highlighter": "^12.2.1",
+    "typed-css-modules": "^0.6.3",
+    "typescript": "^3.7.5"
   },
   "devDependencies": {
     "prettier": "^1.19.1"
